[US-6]-align header and footer, and other UI fix

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -146,7 +146,9 @@
 //     // background-color: rgb(22, 23, 23)
 
 // }
-
+.header-container {
+  width: 100%;
+}
 .header_menu {
   display: none;
 
