--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -231,6 +231,7 @@ html::-webkit-scrollbar-thumb {
 
 html {
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 // HIDE SCROLL EVERYWHERE
