--- a/src/sass/layout/_services.scss
+++ b/src/sass/layout/_services.scss
@@ -34,6 +34,10 @@
     width: 500px;
   }
 }
+.service__block_rev {
+  display: block;
+  width: 280px;
+}
 
 .service__tab--flex {
   display: flex;
